--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                 <div class="left">
                     <i class="fas fa-arrow-left icons" id="chatBackBtn"></i>
                     <div class="contact-info">
-                        <img src="/images/logo mukuru 2.png" alt="Mukuru Logo" class="avatar" style="width:32px;height:32px;margin-right:8px;">
+                        <img src="logo mukuru 2.png" alt="Mukuru Logo" class="avatar" style="width:32px;height:32px;margin-right:8px;">
                         <span class="name">Mukuru</span>
                     </div>
                 </div>
